@@ -40,6 +40,9 @@ runes now have magic shield and dodge as chance for their stats
 added 2 new runewords for magic shield users
 alchemy single use potions now give 3 pots per craft instead of 1
 energy now scales to lvl like mana
+torches can roll magic shield regen
+fixed spells not scaling correctly
+spell dmg is no longer randomized
 
 Warning though, i bet there will be bugs, and balance problems.
 There will also be a lack of mage related unique items and affixes. Which i intend to fill in soon.
